# axum-demo

./: .gitignore  Cargo.toml  deny.toml
configuration/: base.yaml  local.yaml
src/: configuration.rs  dependency.rs  lib.rs  main.rs  middleware.rs  route.rs
src/api/: handler.rs  model.rs
src/repo/: db.rs
