[package]
name = "axum-demo"
version = "0.1.0"
edition = "2024"
authors = ["stephentse"]
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "axumdemo"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["tracing"] }
tower = { version = "0.5", features = ["timeout", "load-shed", "limit"] }
tower-http = { version = "0.6", features = ["trace"] }
# Asynchronous runtime
tokio = { version = "1", features = ["full"] }
# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4"
# Error handling
anyhow = "1.0"
thiserror = "2.0"
# Structured logging
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Libraries
uuid = { version = "1.0", features = ["v4", "v7"] }
config = "0.15"
